summary: NetApp vous propose des fonctionnalités nouvelles et améliorées dans chaque version des services Keystone STaaS. 
---
= Quoi de neuf dans Keystone STaaS
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Découvrez les dernières fonctionnalités et améliorations des services Keystone STaaS.



== 24 novembre 2025

Nouvelles améliorations dans le tableau de bord Keystone dans la NetApp Console:



=== Identifiant de suivi pour les abonnements avec interruption de couverture

Dans la boîte de notification *Complétez votre couverture* de *Surveillance > Moniteurs d'alerte*, chaque abonnement affiche désormais son identifiant de suivi à côté du numéro d'abonnement.



== 10 novembre 2025

Nouvelles améliorations dans le tableau de bord Keystone dans la NetApp Console:



=== Remplissez votre case de notification de couverture

L'onglet *Surveillance des alertes* de la page *Surveillance* comprend une boîte de notification *Complétez votre couverture* qui apparaît en cas de lacunes de couverture. Cette section répertorie les abonnements dont la capacité ou la date d'expiration est insuffisante, ainsi que les moniteurs sans abonnement. Vous pouvez combler les lacunes en ajoutant des abonnements aux moniteurs existants, en créant de nouveaux moniteurs ou en supprimant les moniteurs inutilisés. Pour en savoir plus, consultez link:https://docs.netapp.com/us-en/keystone-staas/integrations/monitoring-alert-monitors.html#manage-coverage-gaps["Gérer les lacunes de couverture pour les moniteurs d'alerte"].



== 13 octobre 2025

Nouvelles améliorations dans le tableau de bord Keystone dans la NetApp Console:



=== Colonne de remplacement de la politique QoS dans l'onglet Ressources
