@@ -953,7 +953,6 @@
   <block id="ddedaabf1afb461a6e3d2fe1320dcca0" category="summary">Avant d'installer Keystone Collector dans un environnement sans accès Internet, également appelé _site sombre_ ou _mode privé_, assurez-vous que vos systèmes sont préparés avec les logiciels nécessaires et répondent à toutes les conditions préalables requises.</block>
   <block id="fd7fae83015d688b86a7ec1ed256864e" category="doc">Préparez l'installation en mode privé</block>
   <block id="2b9854b0330b42530e0aaf8e893e2f28" category="section-title">Configuration requise pour VMware vSphere</block>
-  <block id="4b78be970b5500221a819608df5616e7" category="list-text">Système d'exploitation : serveur VMware vCenter et ESXi 6.7 ou version ultérieure</block>
   <block id="0ed064e2cd201442fba4d1be4a8ee19c" category="list-text">Noyau : 1 CPU</block>
   <block id="0a07fd95ca9bf6935ce5e61609730be6" category="list-text">RAM : 2 Go</block>
   <block id="54c62dd9045f6805a09d9d86b629862d" category="list-text">Espace disque : 20 Go vDisk</block>
@@ -1533,12 +1532,6 @@
   <block id="9a87285999e76f01064e09d4163dacb4" category="list-text">À l'étape 1 de l'assistant *Déployer un modèle OVF*, cliquez sur *Sélectionner un modèle OVF* pour sélectionner le modèle téléchargé<block ref="10e7fe8d7233c9952d9060893052d234" prefix=" " category="inline-code"></block> déposer.</block>
   <block id="eb2f786d0356dd1cd28f20f376d5da2b" category="list-text">À l’étape 2, spécifiez le nom de la machine virtuelle et sélectionnez le dossier de la machine virtuelle.</block>
   <block id="ef93bcb8e06b73273019082b41d87115" category="list-text">À l’étape 3, spécifiez la ressource de calcul requise pour exécuter la machine virtuelle.</block>
-  <block id="6948cdf9e6c5bdc7d80925f15f8f873e" category="list-text">À l'étape 4 : Vérifier les détails, vérifiez l'exactitude et l'authenticité du fichier OVA. Les versions de vCentre antérieures à 7.0u2 ne peuvent pas vérifier automatiquement l'authenticité du certificat de signature de code. vCentre 7.0u2 et les versions ultérieures peuvent effectuer les vérifications. Cependant, pour cela, l'autorité de certification de signature doit être ajoutée à vCentre.  Suivez ces instructions pour votre version de vCentre :</block>
-  <block id="ed55999d50b7451fbe4281de85f01c45" category="example-title">vCentre 7.0u1 et versions antérieures : En savoir plus</block>
-  <block id="8b6cfff06473c4cd5cde3fa4ab929f0a" category="paragraph">vCentre valide l'intégrité du contenu du fichier OVA et qu'un condensé de signature de code valide est fourni pour les fichiers contenus dans le fichier OVA.  Cependant, cela ne valide pas l’authenticité du certificat de signature de code.  Pour vérifier l'intégrité, vous devez télécharger le certificat de résumé de signature complet et le vérifier par rapport au certificat public publié par Keystone.</block>
-  <block id="41466009ab38ed0e1dbd7f2358fa3825" category="list-text">Cliquez sur le lien *Éditeur* pour télécharger le certificat de signature complet.</block>
-  <block id="ae33212e0f96fd19173ab021f7909861" category="example-title">vCentre 7.0u2 et versions ultérieures : En savoir plus</block>
-  <block id="45c3e42547d79b15a504fc354a5ea227" category="paragraph">Les versions 7.0u2 et ultérieures de vCenter sont capables de valider l'intégrité du contenu du fichier OVA et l'authenticité du certificat de signature de code, lorsqu'un condensé de signature de code valide est fourni.  Le magasin de certificats de confiance racine vCenter contient uniquement des certificats VMware.  NetApp utilise Entrust comme autorité de certification et ces certificats doivent être ajoutés au magasin de confiance vCenter.</block>
   <block id="f35abf22d965c5c506fba6f9273a2895" category="list-text">Suivez les étapes de la<block ref="b5a4b64b2aa505bd7c11f79b8a9f458d" prefix=" " category="inline-code"></block> section de cet article de la base de connaissances (KB) :<block ref="2e578ca4f24dfc2cfe15357800b939d4" category="inline-link-rx"></block> .</block>
   <block id="6db4d1fb4f168710dad43e921e4fec52" category="inline-image-macro">Interface utilisateur OVA affichant un certificat vérifié</block>
   <block id="09ecce71a847e29076b9c49beb846dae" category="list-text">À l'étape 5 de l'assistant *Déployer le modèle OVF*, spécifiez l'emplacement de stockage de la machine virtuelle.</block>
@@ -1558,7 +1551,6 @@
   <block id="3901dacdf71718d8755295861e5a2509" category="list-text">Mettez à jour les collecteurs Keystone à l'aide de l'option *Maintenance &gt; Mettre à jour les collecteurs*.  Après la mise à jour, redémarrez l'utilitaire TUI de gestion Keystone Collector pour appliquer les modifications.</block>
   <block id="1cceea5af439cdbb6c02b1dac3e52f59" category="summary">Votre système VMware vSphere doit répondre à plusieurs exigences avant de pouvoir installer Keystone Collector.</block>
   <block id="e662e98288b349f4be4a3688e1269383" category="list-title">Prérequis pour la machine virtuelle du serveur Keystone Collector :</block>
-  <block id="1b787eed58abedc58337d9fef037fb67" category="list-text">Système d'exploitation : serveur VMware vCentre et ESXi 6.7 ou version ultérieure</block>
   <block id="2e82715d47e898df71b0f37522311a05" category="list-text">RAM : 2 Go de RAM</block>
   <block id="33a7d9c43d0ae3063679287913d61f25" category="summary">Afficher ou annuler une demande de service d'abonnement Keystone .</block>
   <block id="d1852e78062b5753f2098c5dc933a1cb" category="doc">Afficher les demandes de service pour les abonnements Keystone</block>
@@ -2555,8 +2547,6 @@
   <block id="b5e09b8913194b721a7e21626585dfc5" category="list-text">Assurez-vous que le certificat public correct a été importé en vérifiant l'empreinte numérique de Keystone Billing Platform dans la base de données RPM :<block ref="46ce6ee7c7afe96ac26dd093842fe062" prefix=" " category="inline-code"></block> L'empreinte digitale correcte ressemble à ceci :<block ref="b91be68b3b67e632293886e3790eccc7" prefix=" " category="inline-code"></block></block>
   <block id="f4baeef0e68eefa8ecbde2db1c9bb6af" category="list-text">Téléchargez le<block ref="5bec9e04971ed49ee2b3c939afa7a801" prefix=" " category="inline-code"></block> déposer:<block ref="55192ff2cd286fc1b545da5fb86c86fb" prefix=" " category="inline-code"></block></block>
   <block id="859d80b97dc3be93d17073cb53fd1183" category="list-text">Vérifiez l'authenticité du fichier :<block ref="50a551e75e87c897a8ad2128c42de747" prefix=" " category="inline-code"></block> La signature d'un fichier authentique ressemble à ceci :<block ref="ae3578a86bb737e9e2439ece85303ecb" prefix=" " category="inline-code"></block></block>
-  <block id="1eba34a29908de527656c195c6a4418a" category="list-text">Téléchargez le certificat public _Keystone Billing_ depuis<block ref="5520f333fe3958930d4ca351e896a12f" category="inline-link-rx"></block>.</block>
-  <block id="8dd9e9a8650be62b5350b1743ec0c25a" category="list-text">Vérifiez l'authenticité du certificat de signature OVA par rapport au certificat public en utilisant OpenSSL :<block ref="f41dec976ad8e65c3e38fceba0104101" prefix=" " category="inline-code"></block></block>
   <block id="b96ad4ab266c25b5492620bb2563d5d0" category="list-text">Téléchargez le certificat d'autorité de certification de signature de code depuis Sectigo<block ref="7342f89b7e38eb427d641531b8da4ba6" category="inline-link-rx"></block>.</block>
   <block id="5107c2f981fc9d221af2aedb4d9c3f10" category="paragraph">Lorsque l'intégrité et l'authenticité de l'OVA Keystone Collector sont validées, vous pouvez voir le texte<block ref="2e5f0dac7b8d485649c8f829e8ba09da" prefix=" " category="inline-code"></block> avec l'éditeur. <block ref="4bb910ce06804868c88e19dd6ff9e83c" category="inline-image-macro-rx" type="image"></block></block>
   <block id="f4d3f733b36c05e3bcdf4287f293b20f" category="paragraph">Si le cluster est configuré en MetroCluster , exécutez la commande suivante :</block>
@@ -2618,4 +2608,16 @@
   <block id="2193640916b96caede95ed8f42c339e8" category="paragraph"><block ref="2193640916b96caede95ed8f42c339e8" category="inline-image-macro-rx" type="image"></block></block>
   <block id="bfad9751c60f0a457fcc252ae1a203b7" category="paragraph">Contactez le support NetApp Keystone pour plus d'informations sur ces messages. Pour plus d'informations sur la manière de soumettre des demandes de service, consultez <block ref="f97d063259ee0af881752dffb06b5bc4" category="inline-link-macro-rx"></block>.</block>
   <block id="3a51c5c35df88316b8d012c010e340f7" category="section-title">24 novembre 2025</block>
+  <block id="236430e108e8394ac19913076b10fb55" category="doc">Étiquette renommée « Capacité de rupture accumulée »</block>
+  <block id="73ba7647571e18c30e8b5b930b7d7ffb" category="paragraph">L'étiquette *Capacité de pointe cumulée* est renommée *Capacité de pointe cumulée*.</block>
+  <block id="a6145fbfb28ae332bb61854cc43b2999" category="list-text">Système d'exploitation : serveur VMware vCenter et ESXi 8.0 ou version ultérieure</block>
+  <block id="19c50fb6e1d8179976234d4afbeaf824" category="list-text">À l'étape 4 : Vérifier les détails, assurez-vous de l'exactitude et de l'authenticité du fichier OVA.</block>
+  <block id="89982b0af4c1ad3b86da7a82b021fed7" category="paragraph">Le magasin de certificats de confiance racine vCenter contient uniquement des certificats VMware. NetApp utilise Entrust comme autorité de certification et ces certificats doivent être ajoutés au magasin de confiance vCenter.</block>
+  <block id="6421324a362bee91e5fee16704e6b0e5" category="admonition">Pour les versions 7.x et antérieures de vCenter, vous devez mettre à jour vCenter et ESXi vers la version 8.0 ou ultérieure. Les versions antérieures ne sont plus prises en charge.</block>
+  <block id="21f65ffde9511843c6e3b86b7a0de865" category="list-text">Système d'exploitation : serveur VMware vCentre et ESXi 8.0 ou version ultérieure</block>
+  <block id="effa0f06c02c1da56e0eada86a5982ec" category="list-text">Les options du menu déroulant *Affichage* dépendent de votre plateforme d'abonnement Keystone . Les *volumes en clusters* et les *nœuds en clusters* sont disponibles pour ONTAP. Pour StorageGRID, le menu déroulant *View* n'est pas disponible, le tableau *Nodes in grids* s'affiche automatiquement. Si votre abonnement inclut les deux plateformes, les trois options sont disponibles.</block>
+  <block id="a71fbcfaa67815b8c0edea5059cb96fb" category="admonition">La page *Actifs* affiche des onglets en fonction des plateformes associées à vos abonnements Keystone . Pour ONTAP, les onglets *Nœuds dans les clusters* et *Volumes dans les clusters* sont tous deux disponibles. Pour StorageGRID, le tableau *Nœuds dans les grilles* s'affiche directement sans sélection d'onglet. Si l'abonnement inclut les deux plateformes, les trois onglets sont disponibles.</block>
+  <block id="7a29351a5aff62fec009044b13aad77f" category="paragraph">Les abonnements affichent incorrectement le statut *Dépassement de la limite de consommation* dans le tableau de bord Digital Advisor alors que la consommation reste dans les limites de consommation autorisées.</block>
+  <block id="81899b5a6230dd4cf7e0bff4dbc71dfb" category="paragraph">08/12/2025</block>
+  <block id="2727f68982ff25e8b3c57e026120561d" category="section-title">8 décembre 2025</block>
 </blocks>
